# treball_models_fisica

./: src_pxs_RetinexNLTychonoff_NOCOLOR.cpp  src_pxs_RetinexNLTychonoff_color.cpp
codis_definitiu/: CMakeLists.txt
codis_definitiu/include/tami/retinex/: libRetinexNL.h  libtreball_models_fisica.h
codis_definitiu/src/: libRetinexNL.cpp  libtreball_models_fisica.cpp  src_pxs_RetinexNL.cpp  src_treball_models_fisica_varsep.cpp
executar/: exec.sh  experimentacio.sh
executar/varsep/: debug.sh
python/: mallat.py
